feat:add addapi api
