# docs/swagger.json
@@ -7,6 +7,52 @@
     },
     "host": "localhost:8080",
     "paths": {
+        "/v1/addapi": {
+            "post": {
+                "description": "参数校验慢慢完善",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "api记录操作"
+                ],
+                "summary": "创建api",
+                "parameters": [
+                    {
+                        "description": "api info",
+                        "name": "UserLogin",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/structtypes.Addapireq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "desc",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/structtypes.JSONResult"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/v1/chacklowversion": {
             "get": {
                 "description": "比较客户端与服务器的版本号",
@@ -369,6 +415,86 @@
         }
     },
     "definitions": {
+        "structtypes.Addapireq": {
+            "type": "object",
+            "required": [
+                "bodyrecodes",
+                "bodytype",
+                "headcode",
+                "isDeprecated",
+                "path",
+                "pathcode",
+                "projectname",
+                "returncodes",
+                "returntype",
+                "tokens",
+                "types",
+                "username",
+                "words"
+            ],
+            "properties": {
+                "bodyrecodes": {
+                    "description": "body结构",
+                    "type": "string"
+                },
+                "bodytype": {
+                    "description": "body的类型",
+                    "type": "string"
+                },
+                "headcode": {
+                    "description": "请求头部结构",
+                    "type": "string"
+                },
+                "isDeprecated": {
+                    "description": "弃用状态",
+                    "type": "integer",
+                    "enum": [
+                        1,
+                        2
+                    ]
+                },
+                "path": {
+                    "description": "路径",
+                    "type": "string"
+                },
+                "pathcode": {
+                    "description": "path结构",
+                    "type": "string"
+                },
+                "projectname": {
+                    "description": "项目名",
+                    "type": "string"
+                },
+                "returncodes": {
+                    "description": "返回结构",
+                    "type": "string"
+                },
+                "returntype": {
+                    "description": "返回类型",
+                    "type": "string"
+                },
+                "tokens": {
+                    "description": "用户token",
+                    "type": "string"
+                },
+                "types": {
+                    "description": "请求类型",
+                    "type": "string",
+                    "enum": [
+                        "get",
+                        "post"
+                    ]
+                },
+                "username": {
+                    "description": "用户名",
+                    "type": "string"
+                },
+                "words": {
+                    "description": "注释",
+                    "type": "string"
+                }
+            }
+        },
         "structtypes.Createproject": {
             "type": "object",
             "required": [
@@ -464,9 +590,6 @@
         "structtypes.Setpermission": {
             "type": "object",
             "required": [
-                "adminnames",
-                "editnames",
-                "guestnames",
                 "projectname",
                 "tokens",
                 "username"
